spectec/test/elab/neg/type-syn-invalid-id.spectec
;; A forward declaration's identifier carries a numeric suffix that
;; strip_var_suffix would remove.

syntax x_1
